# zkfold-ethereum

./: .gitignore  LICENSE  README.md  cabal.project  zkfold-ethereum.cabal
backends/: README.md
backends/circuit/: Main.hs
backends/prover/: Main.hs
backends/setup/: Main.hs
backends/solidity/: go.mod  go.sum  setup.go
backends/src/: Utils.hs
e2e-test/: README.md
e2e-test/specification/plonk/: main.typ
e2e-test/specification/symbolic/: main.typ  transaction.typ
e2e-test/template/symbolic/: .gitignore  package.json
e2e-test/template/symbolic/contracts/: IVerifier.sol  Queue.sol  SymboicERC20.sol  Symbolic.sol  SymbolicERC20.sol  Verifier.sol  Verify.sol
e2e-test/template/symbolic/contracts/Verify/: Bn254.sol  InternalVerifier.sol  Transcript.sol
e2e-test/template/symbolic/ignition/modules/: README.md  Symbolic.js  Symbolic.ts  Verify.js  Verify.ts
e2e-test/template/symbolic/scripts/: README.md  interact.js
e2e-test/template/symbolic/tests/: plonk_test.sol
