cabal-version:      3.0

name:               zkfold-ethereum
version:            0.1.0.0

category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

common lang
    ghc-options:
      -Wall
      -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Widentities
      -- -Wunused-packages
      -Wmissing-deriving-strategies

executable circuit
  import:           lang
  default-language: GHC2021
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/circuit
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cborg                          ,
    directory                      ,
    zkfold-base                    ,
    QuickCheck                     ,

executable prover
  import:           lang
  default-language: GHC2021
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/prover
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    zkfold-base                    ,
    QuickCheck                     ,

executable setup-to-verify
  import:           lang
  default-language: GHC2021
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/setup-to-verify
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    zkfold-base                    ,
    QuickCheck                     ,
